# modellbahn

./: .envrc  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy-docs.yml
doc/: .gitignore  README.md  mkdocs.yml  pyproject.toml
doc/docs/: blocks49.md  index.md  rails.md  rails49.md
doc/docs/blog/: index.md
doc/docs/blog/posts/: 2026-01-31 mkdocs.md  2026-02-01 rails49.md  2026-02-03 doc.md
doc/docs/blog/rails49/: balena.md
rails/: .dockerignore  .gitignore  docker-compose.template.yml  pyproject.toml
rails/dcc-ex/: Dockerfile  bridge.py  entrypoint.sh
rails/mqtt/: Dockerfile  nanomq.conf
rails/rocrail/: Dockerfile  rocraild-run.sh
rails/tests/: smoke_test.sh  test_bridge.py  test_dcc.py  test_mqtt.py  test_ws.py
rails/traefik/: Dockerfile  dynamic_conf.template.yaml  traefik.template.yaml
rails/ui/: index.template.html
rails/vscode/: Dockerfile
